# CFI-Enforcement

./: .gitignore  CMakeLists.txt  README.md  build-llvm.sh  enable  pre-commit  run.sh
demo/: Makefile  disptach.c
demo/icall/: Makefile  dispatch.c
demo/vcall/: Makefile  rtti.cpp
src/: Analyzer.cpp  Analyzer.h  CFIEnforce.cpp  CMakeLists.txt  Config.cpp  Config.h  Transform.cpp  Transform.h  Utils.cpp  Utils.h  main.cpp
test/0/: Makefile  test.c
tests/: README.md  Readme.md
tests/0/: Makefile
tests/1/: Makefile  Readme.md  naivetest.c
tests/2/: Makefile  Readme.md  irrelevant.c  irrelevant.h  main.c  operation.c  operation.h  util.c  util.h
